<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Little Fox Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_quiz_play">Quiz</string>
    <string name="button_youtube">Youtube</string>
    <string name="button_pay_ing">Payment</string>
    <string name="button_remain_all_play">View rest</string>
    <string name="button_replay">Replay</string>
    <string name="second">sec</string>
    <string name="button_subtitle_default">Normal</string>
    <string name="button_subtitle_have">Subtitle</string>
    <string name="title_littlefox_eng">Little Fox English</string>
    <string name="title_littlefox_ch">Little Fox Chinese</string>
    <string name="title_intro_player">Player</string>
    <string name="title_intro_littlefox">Little Fox</string>
    <string name="title_play_list">PlayList</string>
    <string name="title_playing_speed">Playing Speed</string>

    <string-array name="name_day">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Thesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saterday</item>
    </string-array>

    <string-array name="name_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="text_list_speed">
        <item>0.7x</item>
        <item>0.85x</item>
        <item>1x (Normal)</item>
        <item>1.15x</item>
        <item>1.3x</item>
    </string-array>

    <string name="title_other_app">Little Fox Other App</string>
    <string name="title_other_app_littlefox_song">Little Fox\nSong</string>
    <string name="title_other_app_rocketgirl">Rocket Girl\nLittle Fox Storybook</string>
    <string name="title_other_app_littlefox_eng">Little Fox\nEnglish</string>
    <string name="title_other_app_littlefox_ch">Little Fox\nChinese</string>
    <string name="message_preview_end_youtube">Watch our contents for free \non the official Little Fox Youtube Channel.</string>
    <string name="message_preview">Preview...</string>
    <string name="message_preview_end">Preview has ended.</string>
    <string name="message_storage_size_warning">Cannot play image due to insufficient storage. Please free up some space.</string>
    <string name="message_choice_title_2">\nfrom Monday to Friday.</string>
    <string name="message_choice_title_1">We publish a new story </string>
    <string name="message_new_version_update">A new version of Little Fox Player is available. Do you want to update now?</string>
    <string name="message_critical_version_update">We recommend that you use the latest version of the Little Fox Player. If not, there may be problems during its use.</string>
    <string name="message_longtime_play_warning">You are watching movie for a long time. Would you like to take a rest for a while? Do you want to continue watching movie?</string>
</resources>
